--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@ header {
   
   .header__container {
     text-align: center;
-    height: 100rem;
+    height: 100%;
     position: relative;
   }
   
@@ -46,7 +46,7 @@ header {
     transform: translateX(-50%);
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 5rem 1.5rem 1.5rem 1.5rem;
   }
   
@@ -55,6 +55,7 @@ header {
     max-width: 20rem;
     margin-top: 2.5rem;
     justify-content: center;
+    aspect-ratio: 1/1;
   } */
   /* =============== SCROLL DOWN ============== */
   .scroll__down {
@@ -67,9 +68,9 @@ header {
   }
   
   /* ================ MEDIA QUERIES (MEDIUM DEVICES) ================= */
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1080px) {
     header {
-      height: 68vh;
+      height: 100vh;
     }
   }
   
