--- a/src/index.css
+++ b/src/index.css
@@ -108,12 +108,11 @@ a:hover {
     color: var(--color-bg);
 }
 
-img {
+/* img {
     display: block;
-    width: 89.3%;
+    width: 100%;
     object-fit: cover;
-
-}
+} */
 
 .img-about {
     display: block;
